utilityBarLinks/force-app/main/default/objects/Utility_Bar_Link__mdt/Utility_Bar_Link__mdt.object-meta.xml
<CustomObject>
    <description>This metadata type allows you to set external links for a particular user, controlled by the users Id</description>
    <label>Utility Bar Link</label>
    <pluralLabel>Utility Bar Links</pluralLabel>
</CustomObject>