utilityBarLinks/force-app/main/default/objects/Utility_Bar_Link__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determined whether or not the link is active and available for showing.</description>
    <inlineHelpText>Determined whether or not the link is active and available for showing.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>