utilityBarLinks/force-app/main/default/objects/Utility_Bar_Link__mdt/fields/Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_URL__c</fullName>
    <description>Stores the link URL.</description>
    <inlineHelpText>Stores the link URL.</inlineHelpText>
    <label>Link URL</label>
    <type>Url</type>
</CustomField>