utilityBarLinks/force-app/main/default/objects/Utility_Bar_Link__mdt/fields/Open_In_Console_Tab__c.field-meta.xml
<CustomField>
    <fullName>Open_In_Console_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If used in a console app, allows users to open said links with in the salesforce window.</description>
    <inlineHelpText>If used in a console app, allows users to open said links with in the salesforce window.</inlineHelpText>
    <label>Open In Console Tab</label>
    <type>Checkbox</type>
</CustomField>