utilityBarLinks/force-app/main/default/objects/Utility_Bar_Link__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Sets the order in which a link is displayed. Lower numbers indicate that the link should be displayed first.</description>
    <inlineHelpText>Sets the order in which a link is displayed. Lower numbers indicate that the link should be displayed first.</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>